fix gray area under photo and fix breadcrumb scrollbar

--- a/activities/calendar/list/css/index.css
+++ b/activities/calendar/list/css/index.css
@@ -55,6 +55,7 @@ td:nth-child(5) {
   width: 1200px;
   margin: 0 auto;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .main-center {
