--- a/activities/calendar/list/details/css/index.css
+++ b/activities/calendar/list/details/css/index.css
@@ -42,6 +42,7 @@ body {
   width: 1200px;
   margin: 0 auto;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .Details_Informations {
