--- a/activities/facilities/css/index.css
+++ b/activities/facilities/css/index.css
@@ -27,6 +27,7 @@ body {
   width: 1200px;
   margin: 0 auto;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .section {
