--- a/activities/photo/css/index.css
+++ b/activities/photo/css/index.css
@@ -36,6 +36,7 @@
   width: 1200px;
   margin: 0 auto;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .main-center {
