--- a/city-resources/css/index.css
+++ b/city-resources/css/index.css
@@ -23,6 +23,7 @@ body {
   width: 100%;
   height: 50px;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .main-center p {
