--- a/news/announcements/css/index.css
+++ b/news/announcements/css/index.css
@@ -23,6 +23,7 @@
   width: 1200px;
   margin: 0 auto;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .main-center {
